feat: increase acting name

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -39,5 +39,13 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      (function () {
+        if (window.location.href.includes('dalazenepessoa')) {
+          window.location.href = "https://dpbadvogados.com.br";
+        }
+
+      })()
+    </script>
   </body>
 </html>
